src/objects/Tuition__c.object
<CustomObject>
    <description>Represents a tuition cost of service of the university or the tuition paid by a student.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RateCode__c</fullName>
        <label>Rate Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermCode__c</fullName>
        <label>Term Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Tuition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tuition Related To</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tuitions</pluralLabel>
    <recordTypes>
        <fullName>DegreeProgram</fullName>
        <active>true</active>
        <description>The tuition cost of a term of a Degree Program.</description>
        <label>Degree Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Student</fullName>
        <active>true</active>
        <description>A historical tuition a student paid during a given term.</description>
        <label>Student</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>